# predictive-maintenance

./: .gitignore  LICENSE  README.md
crds/: device-model.yaml  device.yaml
datasets/: PM_test_49.txt
estimator/: Predictive Maintenance.ipynb
estimator/forecast_service/: app.py  docker-compose.yml  pyproject.toml  requirements.txt
estimator/forecast_service/forecast_service/: __main__.py  db.py  estimator.py  event_publisher.py  handler.py  normalization.py  normalizer_main.py
estimator/forecast_service/resources/preprocessors/: turbofan_scaler.pkl
estimator/forecast_service/tests/: test_db.py  test_estimator.py  test_handler.py  test_influxdb.py
estimator/training/: Export to tensorflow.ipynb  Kafka.ipynb  Predictive Maintenance.ipynb  pyproject.toml  requirements.txt
estimator/training/models/turbofan/: saved_model.pb
estimator/training/models/turbofan/0001/variables/: variables.data-00000-of-00001
estimator/training/models/turbofan/variables/: variables.index
estimator/turbofan/: build.gradle.kts  settings.gradle.kts
kubernetes/: README.md
kubernetes/kafka/: kubernetes-deployment.yaml  kubernetes-svc.yaml  kubernetes-zk-deployment.yaml  kubernetes-zk-svc.yaml
kubernetes/mqtt2kafka/: deployment.yaml
kubernetes/prediction/: deployment.yaml
kubernetes/tick/: kapacitor.yaml  telegraf.yaml
mappers/: Dockerfile  README.md  config.py  deployment.yaml  file_mapper.py  main.py  pyproject.toml  requirements.txt
mappers/datasets/: Obtain dataset.ipynb  over_100.csv
mappers/util/: messages.py
prediction/: Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  test.py
prediction/prediction/: app.py  config.py  estimator.py  models.py  preprocessing.py  state.py
prediction/prediction/models/: prediction.py  turbofan.py
prediction/test/: send_faust.py  send_test_data.py  test_estimator.py  test_state.py  util.py
test-environment/: README.md  docker-compose.yml
test-environment/etc/: telegraf.conf
tests/: Extract info.ipynb  README.md  pod_table.csv  pyproject.toml  test2.csv
tests/data/: chronograf_data_export_prediction.csv  grafana_data_export_cluster_cpu.csv  grafana_data_export_cluster_ram.csv  grafana_data_export_cpu.csv  grafana_data_export_ram.csv
tests/grafana/: K8 Cluster Detail Dashboard-1592223114098.json
tests/results/: latency_table.csv  master_table.csv  performance_table.csv  pod_table.csv  throughput_table.csv  worker_table.csv
training/: Export to tensorflow.ipynb  README.md  Training.ipynb  pyproject.toml  requirements.txt
training/models/: regression_model_v1.h5
vagrant/cloud/: Vagrantfile
vagrant/edge/: Vagrantfile
vagrant/scripts/: init-master.sh  install-docker.sh  install-go.sh  install-kubeadm.sh  install-mosquitto.sh  install-prerequisites.sh  provision-master.sh
vagrant/scripts/conf/: calico.yaml
(+51 files in other folders)
