[tool.poetry]
name = "turbofan-training"
version = "0.1.0"
description = ""
authors = ["Alessandro Pacielli <alessandropacielli@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
keras = "^2.3.1"
numpy = "^1.18.4"
pandas = "^1.0.3"
matplotlib = "^3.2.1"
seaborn = "^0.10.1"
scikit-learn = "^0.22.2"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
